# quant-iron

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: quant_iron_benchmarks.rs
examples/: circuit_macro.rs  circuits.rs  hamiltonian.rs  heisenberg.rs  parametric.rs  qasm.rs  qubits.rs
src/: circuit.rs  errors.rs  lib.rs  macros.rs  subroutine.rs
src/algorithms/: mod.rs  time_evolution.rs
src/compiler/: compilable.rs  ir.rs  mod.rs  qasm.rs
src/components/: gate.rs  gpu_context.rs  measurement.rs  mod.rs  operator.rs  pauli_string.rs  state.rs
src/components/kernels/: hadamard.cl  match_gate.cl  pauli_x.cl  pauli_y.cl  pauli_z.cl  phase_s_sdag.cl  phase_shift.cl  rotate_x.cl  rotate_y.cl  rotate_z.cl  swap.cl
src/components/parametric/: mod.rs  parameter.rs  parametric_gate.rs
src/models/: heisenberg.rs  ising.rs  mod.rs
src/tests/: circuit_tests.rs  gate_tests.rs  heisenberg_tests.rs  ising_tests.rs  macros_tests.rs  measurement_tests.rs  mod.rs  operator_tests.rs  parametric_tests.rs  pauli_string_tests.rs  state_tests.rs  time_evolution_tests.rs
