[package]
name = "quant-iron"
version = "1.1.0"
edition = "2024"
keywords = ["quantum_computing", "science", "gpu"]
categories = ["science"]
authors = ["LordSaumya"]
license = "MIT"
repository = "https://github.com/LordSaumya/quant-iron"
description = "A high-performance, hardware-accelerated modular quantum computing library with a focus on physical applications. Quant-Iron provides tools to represent quantum states, apply standard quantum gates, perform measurements, build quantum circuits, and implement quantum algorithms."
readme = "README.md"

[lib]
name = "quant_iron"
path = "src/lib.rs"
doctest = false

[dependencies]
num-complex = "0.4.6"
ocl = { version = "0.19.7", optional = true }
once_cell = "1.18"
paste = "1.0.15"
rand = "0.9.1"
rayon = "1.10.0"
thiserror = "2.0.12"

[features]
default = []
gpu = ["ocl"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "quant_iron_benchmarks"
harness = false

# Optimise dependencies in release mode
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Strip symbols from binary
debug = false

# Enable better error messages in debug builds
[profile.dev.package."*"]
opt-level = 1
debug = true
